--- a/index.html
+++ b/index.html
@@ -185,6 +185,14 @@
             </div>
 
             <div class="notebook-card">
+                <h2><a href="compilers/_book/index.html">Compilers</a></h2>
+                <p>Description.</p>
+                <div class="notebook-meta">
+                    Last updated: Jan. 2025
+                </div>
+            </div>
+
+            <div class="notebook-card">
                 <h2><a href="????/_book/index.html">Machine Learning Systems</a></h2>
                 <p>Description.</p>
                 <div class="notebook-meta">
